# bslite

./: Cargo.toml  bin.js  index.d.ts  index.js  package-lock.json  package.json  test.mjs
.github/workflows/: CI.yml
__test__/: index.spec.mjs
bs_core/: Cargo.toml
bs_core/src/: address.rs  bind_address.rs  browsersync.rs  cli.rs  lib.rs  server.rs  static_route.rs
bslite/: Cargo.toml
bslite-rs/: Cargo.toml
bslite-rs/src/: main.rs
bslite/src/: lib.rs
examples/hello-world/: hello-world.js  index.html  package.json
examples/one-file/: site.yaml
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
