[workspace]
members = ["bslite", "bs_core"]

[workspace.dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
actix-rt = "2.8.0"
clap = { version = "4.1.11", features = ["derive"] }
env_logger = "0.10.0"
tokio = "1.26.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = { version = "1.0.94" }
log = "0.4.17"