[package]
name = "bs_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files.workspace = true
actix-web.workspace = true
actix-rt.workspace = true
env_logger.workspace = true
log.workspace = true
