[package]
edition = "2021"
name = "bslite"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi-derive = "2.11.0"

bs_core = { path = "../bs_core", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true

[dependencies.napi]
version = "2.11.1"
default-features = false
features = ["tokio_rt", "tokio_full"]

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true

[dependencies.clap]
version = "4.1.11"
features = ["derive"]